--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
     "express": "^4.18.2",
+    "npm": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "update": "^0.4.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
